# MyuralYukariNetwork

./: .env.example  .gitignore  API_SPEC.md  ARCHITECTURE.md  DEVELOPMENT_RULES.md  DEV_GUIDE.md  SETUP.md  env.ps1  env.sh  main.py  readme.md
.github/workflows/: ci.yml
contracts/: memory.proto
go-backend/: Makefile  go.mod  go.sum
go-backend/cmd/server/: main.go
go-backend/internal/api/: chat_flow.go  chat_handler.go  errors.go  handler.go  handler_test.go  helpers.go  status_handler.go
go-backend/internal/config/: config.go  config_test.go
go-backend/internal/logger/: logger.go
go-backend/internal/memory/: client.go  client_grpc_test.go  client_test.go  dialer_nonwindows.go  dialer_windows.go
go-backend/internal/ollama/: client.go
go-backend/shared/: schemas.go
memU/: CHANGELOG.md  Modelfile  README.md  pyproject.toml
memU/docs/providers/: grok.md
memU/tests/: test_lazyllm.py
memU/tests/llm/: test_grok_provider.py
memory_chat_app/: __init__.py  bootstrap.py  config.py  go_client_example.go  sidecar.py
python-sidecar/: Makefile  main.py  requirements.txt
python-sidecar/src/: contracts.py  memu_payloads.py
python-sidecar/src/config/: __init__.py
python-sidecar/src/grpc_gen/: __init__.py  (+2 more)
python-sidecar/tests/: test_contracts.py  test_main_recall.py  test_memu_payloads.py
scripts/: start-dev.ps1  stop-dev.ps1
tauri_app/: README.md  eslint.config.js  index.html  package-lock.json  package.json
tauri_app/src/: App.jsx  main.js  styles.css
tauri_app/src-tauri/: Cargo.toml  tauri.conf.json
tauri_app/src-tauri/src/: main.rs
(+32 files in other folders)
