[package]
name = "myural_yukari_tauri"
version = "0.1.0"
description = "Minimal Tauri shell for Myural Yukari Network"
edition = "2021"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
